src/dts/tests/nested_modules/nested_modules.exp

nested_modules.js:5:9,14: number
This type is incompatible with
[LIB] nested_modules.js:16:25,29: string

nested_modules.js:7:18,21: property y
Error:
nested_modules.js:7:9,14: string
This type is incompatible with
[LIB] nested_modules.js:4:18,23: number

Found 2 errors
